firmware/build/log/idf_py_stdout_output_240
Command: ninja all
[1/180] Building C object esp-idf/TaskSerial/CMakeFiles/__idf_TaskSerial.dir/TaskSerial.c.obj
FAILED: esp-idf/TaskSerial/CMakeFiles/__idf_TaskSerial.dir/TaskSerial.c.obj 
ccache C:\Users\analu\.espressif\tools\xtensa-esp-elf\esp-15.2.0_20251204\xtensa-esp-elf\bin\xtensa-esp32s3-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"d4bf404d\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/esp/controle-proporcional/firmware/build/config -IC:/esp/controle-proporcional/firmware/components/TaskSerial -IC:/esp/release-v6.0/esp-idf/components/esp_libc/platform_include -IC:/esp/release-v6.0/esp-idf/components/freertos/config/include -IC:/esp/release-v6.0/esp-idf/components/freertos/config/include/freertos -IC:/esp/release-v6.0/esp-idf/components/freertos/config/xtensa/include -IC:/esp/release-v6.0/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/esp/release-v6.0/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/esp/release-v6.0/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/esp/release-v6.0/esp-idf/components/freertos/esp_additions/include -IC:/esp/release-v6.0/esp-idf/components/esp_hw_support/include -IC:/esp/release-v6.0/esp-idf/components/esp_hw_support/include/soc -IC:/esp/release-v6.0/esp-idf/components/esp_hw_support/ldo/include -IC:/esp/release-v6.0/esp-idf/components/esp_hw_support/debug_probe/include -IC:/esp/release-v6.0/esp-idf/components/esp_hw_support/etm/include -IC:/esp/release-v6.0/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -IC:/esp/release-v6.0/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IC:/esp/release-v6.0/esp-idf/components/esp_hw_support/power_supply/include -IC:/esp/release-v6.0/esp-idf/components/esp_hw_support/modem/include -IC:/esp/release-v6.0/esp-idf/components/esp_hw_support/include/soc/esp32s3 -IC:/esp/release-v6.0/esp-idf/components/esp_hw_support/port/esp32s3/. -IC:/esp/release-v6.0/esp-idf/components/esp_hw_support/port/esp32s3/include -IC:/esp/release-v6.0/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/. -IC:/esp/release-v6.0/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/include -IC:/esp/release-v6.0/esp-idf/components/heap/include -IC:/esp/release-v6.0/esp-idf/components/heap/tlsf -IC:/esp/release-v6.0/esp-idf/components/log/include -IC:/esp/release-v6.0/esp-idf/components/soc/include -IC:/esp/release-v6.0/esp-idf/components/soc/esp32s3 -IC:/esp/release-v6.0/esp-idf/components/soc/esp32s3/include -IC:/esp/release-v6.0/esp-idf/components/soc/esp32s3/register -IC:/esp/release-v6.0/esp-idf/components/hal/platform_port/include -IC:/esp/release-v6.0/esp-idf/components/hal/esp32s3/include -IC:/esp/release-v6.0/esp-idf/components/hal/include -IC:/esp/release-v6.0/esp-idf/components/esp_rom/include -IC:/esp/release-v6.0/esp-idf/components/esp_rom/esp32s3/include -IC:/esp/release-v6.0/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -IC:/esp/release-v6.0/esp-idf/components/esp_rom/esp32s3 -IC:/esp/release-v6.0/esp-idf/components/esp_common/include -IC:/esp/release-v6.0/esp-idf/components/esp_system/include -IC:/esp/release-v6.0/esp-idf/components/esp_system/port/soc -IC:/esp/release-v6.0/esp-idf/components/esp_system/port/include/private -IC:/esp/release-v6.0/esp-idf/components/esp_stdio/include -IC:/esp/release-v6.0/esp-idf/components/xtensa/esp32s3/include -IC:/esp/release-v6.0/esp-idf/components/xtensa/include -IC:/esp/release-v6.0/esp-idf/components/xtensa/deprecated_include -IC:/esp/release-v6.0/esp-idf/components/esp_hal_gpio/include -IC:/esp/release-v6.0/esp-idf/components/esp_hal_gpio/esp32s3/include -IC:/esp/release-v6.0/esp-idf/components/esp_hal_usb/include -IC:/esp/release-v6.0/esp-idf/components/esp_hal_usb/esp32s3/include -IC:/esp/release-v6.0/esp-idf/components/esp_hal_pmu/include -IC:/esp/release-v6.0/esp-idf/components/esp_hal_pmu/esp32s3/include -IC:/esp/release-v6.0/esp-idf/components/esp_hal_ana_conv/include -IC:/esp/release-v6.0/esp-idf/components/esp_hal_ana_conv/esp32s3/include -IC:/esp/release-v6.0/esp-idf/components/esp_hal_dma/include -IC:/esp/release-v6.0/esp-idf/components/esp_hal_dma/esp32s3/include -IC:/esp/release-v6.0/esp-idf/components/lwip/include -IC:/esp/release-v6.0/esp-idf/components/lwip/include/apps -IC:/esp/release-v6.0/esp-idf/components/lwip/lwip/src/include -IC:/esp/release-v6.0/esp-idf/components/lwip/port/include -IC:/esp/release-v6.0/esp-idf/components/lwip/port/freertos/include -IC:/esp/release-v6.0/esp-idf/components/lwip/port/esp32xx/include -IC:/esp/release-v6.0/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/esp/release-v6.0/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/esp/controle-proporcional/firmware/components/joystick -IC:/esp/controle-proporcional/firmware/components/config -IC:/esp/controle-proporcional/firmware/components/queues -IC:/esp/controle-proporcional/firmware/components/serial @"C:/esp/controle-proporcional/firmware/build/toolchain/cflags" -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/esp/controle-proporcional/firmware=. -fmacro-prefix-map=C:/esp/release-v6.0/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu23 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -MD -MT esp-idf/TaskSerial/CMakeFiles/__idf_TaskSerial.dir/TaskSerial.c.obj -MF esp-idf\TaskSerial\CMakeFiles\__idf_TaskSerial.dir\TaskSerial.c.obj.d -o esp-idf/TaskSerial/CMakeFiles/__idf_TaskSerial.dir/TaskSerial.c.obj -c C:/esp/controle-proporcional/firmware/components/TaskSerial/TaskSerial.c
C:/esp/controle-proporcional/firmware/components/TaskSerial/TaskSerial.c: In function 'TaskSerial':
C:/esp/controle-proporcional/firmware/components/TaskSerial/TaskSerial.c:11:9: error: implicit declaration of function 'enviar_serial' [-Wimplicit-function-declaration]
   11 |         enviar_serial(&valor_atual);  // só executa se a fila tinha dado válido
      |         ^~~~~~~~~~~~~
[2/180] Building C object esp-idf/unity/CMakeFiles/__idf_unity.dir/unity_utils_cache.c.obj
[3/180] Building C object esp-idf/unity/CMakeFiles/__idf_unity.dir/unity_runner.c.obj
[4/180] Building C object esp-idf/unity/CMakeFiles/__idf_unity.dir/unity_port_esp32.c.obj
[5/180] Building C object esp-idf/unity/CMakeFiles/__idf_unity.dir/unity_utils_memory.c.obj
[6/180] Building C object esp-idf/unity/CMakeFiles/__idf_unity.dir/unity_utils_freertos.c.obj
ninja: build stopped: subcommand failed.
